--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-   <html lang="en">
-   <head>
-       <meta charset="UTF-8">
-       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <title>My Project</title>
-   </head>
-   <body>
-       <h1>Welcome to My Project</h1>
-   </body>
-   </html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Alaa Rajab" />
+    <meta name="description" content="Spots website" />
+    <meta name="keywords" content="HTML, CSS" />
+    <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <title>Spots</title>
+  </head>
+  <body>
+    <div class="page">
+      <header class="header"><h1>Welcome to My Project</h1></header>
+      <main class="content"></main>
+      <footer class="footer"></footer>
+    </div>
+  </body>
+</html>
