--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
           </ul>
         </section>
       </main>
-      <footer class="footer page__section"></footer>
+      <footer class="footer page__section">
+        <p class="footer__copyright">2024 &copy; Spots</p>
+      </footer>
     </div>
   </body>
 </html>
