--- a/index.html
+++ b/index.html
@@ -119,14 +119,24 @@
           <form name="edit-profile" class="modal__form">
             <label for="name" class="modal__label">
               Name
-              <input id="name" type="text" class="modal__input" />
+              <input
+                id="name"
+                type="text"
+                class="modal__input"
+                placeholder="Type your name"
+              />
             </label>
 
             <label for="description" class="modal__label">
               Description
-              <input id="description" type="text" class="modal__input" />
+              <input
+                id="description"
+                type="text"
+                class="modal__input"
+                placeholder="Describe yourself"
+              />
             </label>
-            <button type="submit" class="modal__sumit-btn"></button>
+            <button type="submit" class="modal__submit-btn">Save</button>
           </form>
         </div>
       </div>
