--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <p class="footer__copyright">2024 &copy; Spots</p>
       </footer>
 
-      <div class="modal modal__opened">
+      <div class="modal" id="edit-profile-modal">
         <div class="modal__container">
           <button type="submit" class="modal__close-btn"></button>
 
