--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
         </section>
         <section class="cards page__section">
           <ul class="cards__list">
+            <template id="card-template">
+              <li class="card">
+                <img src="" alt="" class="card__image" />
+                <div class="card__content">
+                  <h2 class="card__title"></h2>
+                  <button type="button" class="card__like-btn"></button>
+                </div>
+              </li>
+            </template>
+            <!--
             <li class="card">
               <img
                 src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg"
@@ -104,6 +114,7 @@
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
+            -->
           </ul>
         </section>
       </main>
