--- a/index.html
+++ b/index.html
@@ -127,12 +127,13 @@
           <button type="button" class="modal__close-btn"></button>
 
           <h2 class="modal__title">Edit Profile</h2>
-          <form name="edit-profile" class="modal__form">
+          <form id="edit-profile-form" class="modal__form">
             <label for="profile-name-input" class="modal__label">
               Name
               <input
                 id="profile-name-input"
                 type="text"
+                name="name"
                 class="modal__input"
                 placeholder="Type your name"
               />
@@ -143,8 +144,40 @@
               <input
                 id="profile-description-input"
                 type="text"
+                name="description"
                 class="modal__input"
                 placeholder="Describe yourself"
+              />
+            </label>
+            <button type="submit" class="modal__submit-btn">Save</button>
+          </form>
+        </div>
+      </div>
+      <div class="modal" id="add-card-modal">
+        <div class="modal__container">
+          <button type="button" class="modal__close-btn"></button>
+
+          <h2 class="modal__title">New post</h2>
+          <form class="modal__form" id="add-card-form">
+            <label for="add-card-link-input" class="modal__label">
+              Image link
+              <input
+                id="add-card-link-input"
+                type="url"
+                name="link"
+                class="modal__input"
+                placeholder="Paste a link to the picture"
+              />
+            </label>
+
+            <label for="add-card-name-input" class="modal__label">
+              Caption
+              <input
+                id="add-card-name-input"
+                type="text"
+                name="name"
+                class="modal__input"
+                placeholder="Type your caption"
               />
             </label>
             <button type="submit" class="modal__submit-btn">Save</button>
