--- a/index.html
+++ b/index.html
@@ -10,32 +10,31 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <title>Spots</title>
   </head>
-  <body>
-    <div class="page">
-      <header class="header">
-        <img src="./images/logo.svg" alt="Spots logo" class="header__logo" />
-      </header>
-      <main class="content">
-        <section class="profile page__section">
-          <img
-            src="./images/avatar.jpg"
-            alt="Bessie Coleman's avatar"
-            class="profile__avatar"
-          />
-          <div class="profile__column">
-            <h1 class="profile__name">Bessie Coleman</h1>
-            <p class="profile__description">Civil Aviator</p>
-            <button type="button" class="profile__edit-btn">
-              <img src="./images/pencil.svg" alt="Pencil icon" />Edit Profile
-            </button>
-          </div>
-          <button type="button" class="profile__add-btn">
-            <img src="./images/plus.svg" alt="Plus icon" />New Post
+  <body class="page">
+    <header class="header">
+      <img src="./images/logo.svg" alt="Spots logo" class="header__logo" />
+    </header>
+    <main class="content">
+      <section class="profile page__section">
+        <img
+          src="./images/avatar.jpg"
+          alt="Bessie Coleman's avatar"
+          class="profile__avatar"
+        />
+        <div class="profile__column">
+          <h1 class="profile__name">Bessie Coleman</h1>
+          <p class="profile__description">Civil Aviator</p>
+          <button type="button" class="profile__edit-btn">
+            <img src="./images/pencil.svg" alt="Pencil icon" />Edit Profile
           </button>
-        </section>
-        <section class="cards page__section">
-          <ul class="cards__list">
-            <!-- <template id="card-template">
+        </div>
+        <button type="button" class="profile__add-btn">
+          <img src="./images/plus.svg" alt="Plus icon" />New Post
+        </button>
+      </section>
+      <section class="cards page__section">
+        <ul class="cards__list">
+          <!-- <template id="card-template">
               <li class="card">
                 <img src="" alt="" class="card__image" />
                 <div class="card__content">
@@ -46,19 +45,19 @@
             </template>
           -->
 
-            <template id="card-template">
-              <li class="card">
-                <div class="card__image-wrapper">
-                  <img src="" alt="" class="card__image" />
-                  <button type="button" class="card__delete-btn"></button>
-                </div>
-                <div class="card__content">
-                  <h2 class="card__title"></h2>
-                  <button type="button" class="card__like-btn"></button>
-                </div>
-              </li>
-            </template>
-            <!--
+          <template id="card-template">
+            <li class="card">
+              <div class="card__image-wrapper">
+                <img src="" alt="" class="card__image" />
+                <button type="button" class="card__delete-btn"></button>
+              </div>
+              <div class="card__content">
+                <h2 class="card__title"></h2>
+                <button type="button" class="card__like-btn"></button>
+              </div>
+            </li>
+          </template>
+          <!--
             <li class="card">
               <img
                 src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg"
@@ -129,75 +128,87 @@
               </div>
             </li>
             -->
-          </ul>
-        </section>
-      </main>
-      <footer class="footer page__section">
-        <p class="footer__copyright">2024 &copy; Spots</p>
-      </footer>
+        </ul>
+      </section>
+    </main>
+    <footer class="footer page__section">
+      <p class="footer__copyright">2024 &copy; Spots</p>
+    </footer>
 
-      <div class="modal" id="edit-profile-modal">
-        <div class="modal__container">
-          <button type="button" class="modal__close-btn"></button>
+    <div class="modal" id="edit-profile-modal">
+      <div class="modal__container">
+        <button type="button" class="modal__close"></button>
 
-          <h2 class="modal__title">Edit Profile</h2>
-          <form id="edit-profile-form" class="modal__form">
-            <label for="profile-name-input" class="modal__label">
-              Name
-              <input
-                id="profile-name-input"
-                type="text"
-                name="name"
-                class="modal__input"
-                placeholder="Type your name"
-              />
-            </label>
+        <h2 class="modal__title">Edit Profile</h2>
+        <form id="edit-profile-form" class="modal__form">
+          <label for="profile-name-input" class="modal__label">
+            Name
+            <input
+              id="profile-name-input"
+              type="text"
+              name="name"
+              class="modal__input"
+              placeholder="Type your name"
+            />
+          </label>
 
-            <label for="profile-description-input" class="modal__label">
-              Description
-              <input
-                id="profile-description-input"
-                type="text"
-                name="description"
-                class="modal__input"
-                placeholder="Describe yourself"
-              />
-            </label>
-            <button type="submit" class="modal__submit-btn">Save</button>
-          </form>
-        </div>
+          <label for="profile-description-input" class="modal__label">
+            Description
+            <input
+              id="profile-description-input"
+              type="text"
+              name="description"
+              class="modal__input"
+              placeholder="Describe yourself"
+            />
+          </label>
+          <button type="submit" class="modal__submit-btn">Save</button>
+        </form>
       </div>
-      <div class="modal" id="add-card-modal">
-        <div class="modal__container">
-          <button type="button" class="modal__close-btn"></button>
+    </div>
+    <div class="modal" id="add-card-modal">
+      <div class="modal__container">
+        <button type="button" class="modal__close"></button>
 
-          <h2 class="modal__title">New post</h2>
-          <form class="modal__form" id="add-card-form">
-            <label for="add-card-link-input" class="modal__label">
-              Image link
-              <input
-                id="add-card-link-input"
-                type="url"
-                name="link"
-                class="modal__input"
-                placeholder="Paste a link to the picture"
-              />
-            </label>
+        <h2 class="modal__title">New post</h2>
+        <form class="modal__form" id="add-card-form">
+          <label for="add-card-link-input" class="modal__label">
+            Image link
+            <input
+              id="add-card-link-input"
+              type="url"
+              name="link"
+              class="modal__input"
+              placeholder="Paste a link to the picture"
+            />
+          </label>
 
-            <label for="add-card-name-input" class="modal__label">
-              Caption
-              <input
-                id="add-card-name-input"
-                type="text"
-                name="name"
-                class="modal__input"
-                placeholder="Type your caption"
-              />
-            </label>
-            <button type="submit" class="modal__submit-btn">Save</button>
-          </form>
-        </div>
+          <label for="add-card-name-input" class="modal__label">
+            Caption
+            <input
+              id="add-card-name-input"
+              type="text"
+              name="name"
+              class="modal__input"
+              placeholder="Type your caption"
+            />
+          </label>
+          <button type="submit" class="modal__submit-btn">Save</button>
+        </form>
       </div>
+    </div>
+    <div class="modal" id="preview-modal">
+      <div class="modal__container modal__container_type_preview">
+        <button
+          type="button"
+          class="modal__close modal__close_type_preview"
+        ></button>
+        <img
+          class="modal__image"
+          src=""
+          alt=""
+        />
+      /<p class="modal__caption"></p>div>
     </div>
     <script defer src="./scripts/index.js"></script>
   </body>
