--- a/index.html
+++ b/index.html
@@ -203,12 +203,9 @@
           type="button"
           class="modal__close modal__close_type_preview"
         ></button>
-        <img
-          class="modal__image"
-          src=""
-          alt=""
-        />
-      /<p class="modal__caption"></p>div>
+        <img class="modal__image" src="" alt="" />
+        <p class="modal__caption"></p>
+      </div>
     </div>
     <script defer src="./scripts/index.js"></script>
   </body>
