--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       </div>
     </div>
     <div class="modal" id="preview-modal">
-      <div class="modal__container modal__container_type_preview">
+      <div class="modal__image-container">
         <button
           type="button"
           class="modal__close modal__close_type_preview"
