--- a/index.html
+++ b/index.html
@@ -149,7 +149,11 @@
               name="name"
               class="modal__input"
               placeholder="Type your name"
+              minlength="2"
+              maxlength="40"
+              required
             />
+            <span id="profile-name-input-error" class="modal__error"></span>
           </label>
 
           <label for="profile-description-input" class="modal__label">
@@ -160,7 +164,14 @@
               name="description"
               class="modal__input"
               placeholder="Describe yourself"
+              minlength="2"
+              maxlength="200"
+              required
             />
+            <span
+              id="profile-description-input-error"
+              class="modal__error"
+            ></span>
           </label>
           <button type="submit" class="modal__submit-btn">Save</button>
         </form>
@@ -180,7 +191,9 @@
               name="link"
               class="modal__input"
               placeholder="Paste a link to the picture"
+              required
             />
+            <span id="add-card-link-input-error" class="modal__error"></span>
           </label>
 
           <label for="add-card-name-input" class="modal__label">
@@ -191,7 +204,11 @@
               name="name"
               class="modal__input"
               placeholder="Type your caption"
+              minlength="2"
+              maxlength="30"
+              required
             />
+            <span id="add-card-name-input-error" class="modal__error"></span>
           </label>
           <button type="submit" class="modal__submit-btn">Save</button>
         </form>
@@ -207,6 +224,7 @@
         <p class="modal__caption"></p>
       </div>
     </div>
+    <script defer src="./scripts/validation.js"></script>
     <script defer src="./scripts/index.js"></script>
   </body>
 </html>
