--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
         <button type="button" class="modal__close"></button>
 
         <h2 class="modal__title">Edit Profile</h2>
-        <form id="edit-profile-form" class="modal__form">
+        <form id="edit-profile-form" class="modal__form" novalidate>
           <label for="profile-name-input" class="modal__label">
             Name
             <input
               id="profile-name-input"
               type="text"
               name="name"
-              class="modal__input"
+              class="modal__input modal__input_type_error"
               placeholder="Type your name"
               minlength="2"
               maxlength="40"
@@ -162,7 +162,7 @@
               id="profile-description-input"
               type="text"
               name="description"
-              class="modal__input"
+              class="modal__input modal__input_type_error"
               placeholder="Describe yourself"
               minlength="2"
               maxlength="200"
@@ -173,7 +173,7 @@
               class="modal__error"
             ></span>
           </label>
-          <button type="submit" class="modal__submit-btn">Save</button>
+          <button type="submit" class="modal__submit-btn btn">Save</button>
         </form>
       </div>
     </div>
@@ -182,14 +182,14 @@
         <button type="button" class="modal__close"></button>
 
         <h2 class="modal__title">New post</h2>
-        <form class="modal__form" id="add-card-form">
+        <form class="modal__form" id="add-card-form" novalidate>
           <label for="add-card-link-input" class="modal__label">
             Image link
             <input
               id="add-card-link-input"
               type="url"
               name="link"
-              class="modal__input"
+              class="modal__input modal__input_type_error"
               placeholder="Paste a link to the picture"
               required
             />
@@ -202,7 +202,7 @@
               id="add-card-name-input"
               type="text"
               name="name"
-              class="modal__input"
+              class="modal__input modal__input_type_error"
               placeholder="Type your caption"
               minlength="2"
               maxlength="30"
@@ -210,7 +210,7 @@
             />
             <span id="add-card-name-input-error" class="modal__error"></span>
           </label>
-          <button type="submit" class="modal__submit-btn">Save</button>
+          <button type="submit" class="modal__submit-btn btn">Save</button>
         </form>
       </div>
     </div>
