--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
         <button type="button" class="modal__close"></button>
 
         <h2 class="modal__title">Edit Profile</h2>
-        <form id="edit-profile-form" class="modal__form" novalidate>
+        <form id="edit-profile-form" class="modal__form">
           <label for="profile-name-input" class="modal__label">
             Name
             <input
               id="profile-name-input"
               type="text"
               name="name"
-              class="modal__input modal__input_type_error"
+              class="modal__input"
               placeholder="Type your name"
               minlength="2"
               maxlength="40"
@@ -162,7 +162,7 @@
               id="profile-description-input"
               type="text"
               name="description"
-              class="modal__input modal__input_type_error"
+              class="modal__input"
               placeholder="Describe yourself"
               minlength="2"
               maxlength="200"
@@ -173,7 +173,12 @@
               class="modal__error"
             ></span>
           </label>
-          <button type="submit" class="modal__submit-btn btn">Save</button>
+          <button
+            type="submit"
+            class="modal__submit-btn modal__submit-btn_inactive"
+          >
+            Save
+          </button>
         </form>
       </div>
     </div>
@@ -182,14 +187,14 @@
         <button type="button" class="modal__close"></button>
 
         <h2 class="modal__title">New post</h2>
-        <form class="modal__form" id="add-card-form" novalidate>
+        <form class="modal__form" id="add-card-form">
           <label for="add-card-link-input" class="modal__label">
             Image link
             <input
               id="add-card-link-input"
               type="url"
               name="link"
-              class="modal__input modal__input_type_error"
+              class="modal__input"
               placeholder="Paste a link to the picture"
               required
             />
@@ -202,7 +207,7 @@
               id="add-card-name-input"
               type="text"
               name="name"
-              class="modal__input modal__input_type_error"
+              class="modal__input"
               placeholder="Type your caption"
               minlength="2"
               maxlength="30"
@@ -210,7 +215,12 @@
             />
             <span id="add-card-name-input-error" class="modal__error"></span>
           </label>
-          <button type="submit" class="modal__submit-btn btn">Save</button>
+          <button
+            type="submit"
+            class="modal__submit-btn modal__submit-btn_inactive"
+          >
+            Save
+          </button>
         </form>
       </div>
     </div>
