--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <button type="button" class="modal__close"></button>
 
         <h2 class="modal__title">Edit Profile</h2>
-        <form id="edit-profile-form" class="modal__form">
+        <form id="edit-profile-form" class="modal__form" novalidate>
           <label for="profile-name-input" class="modal__label">
             Name
             <input
@@ -187,7 +187,7 @@
         <button type="button" class="modal__close"></button>
 
         <h2 class="modal__title">New post</h2>
-        <form class="modal__form" id="add-card-form">
+        <form class="modal__form" id="add-card-form" novalidate>
           <label for="add-card-link-input" class="modal__label">
             Image link
             <input
