--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               type="text"
               name="name"
               class="modal__input"
-              placeholder="Type your name"
+              placeholder="Name"
               minlength="2"
               maxlength="40"
               required
