--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Alaa Rajab" />
+    <meta name="author" content="Alaagit " />
     <meta name="description" content="Spots website" />
     <meta name="keywords" content="HTML, CSS" />
 
