--- a/src/index.html
+++ b/src/index.html
@@ -17,14 +17,17 @@
     </header>
     <main class="content">
       <section class="profile page__section">
-        <!--
-        <img
-          src="./images/avatar.jpg"
-          alt="Bessie Coleman's avatar"
-          class="profile__avatar"
-        />
-      -->
-        <img id="image-avatar" class="profile__avatar" />
+        <!--  <img src="./images/avatar.jpg" alt=" " />-->
+        <div class="profile__avatar-container">
+          <button class="profile__avatar-btn">
+            <img
+              class="profile__pencil-icon"
+              src="<%= require('./images/pencil-light.svg') %>"
+              alt="pencil icon"
+            />
+          </button>
+          <img id="image-avatar" class="profile__avatar" />
+        </div>
         <div class="profile__column">
           <h1 class="profile__name">Bessie Coleman</h1>
           <p class="profile__description">Civil Aviator</p>
@@ -156,6 +159,47 @@
         ></button>
         <img class="modal__image" src="" alt="" />
         <p class="modal__caption"></p>
+      </div>
+    </div>
+    <!--update Avatar-->
+    <div class="modal" id="update-avatar-modal">
+      <div class="modal__container">
+        <button type="button" class="modal__close"></button>
+
+        <h2 class="modal__title">Edit Avatar</h2>
+        <form id="update-avatar-form" class="modal__form" novalidate>
+          <label for="profile-avatar-input" class="modal__label">
+            Avatar
+            <input
+              id="profile-avatar-input"
+              type="url"
+              name="avatar"
+              class="modal__input"
+              placeholder="avatar"
+              required
+            />
+            <span id="profile-avatar-input-error" class="modal__error"></span>
+          </label>
+          <button
+            type="submit"
+            class="modal__submit-btn modal__submit-btn_inactive"
+          >
+            Save
+          </button>
+        </form>
+      </div>
+    </div>
+    <!--Delete cards-->
+    <div class="modal" id="delete-modal">
+      <div class="modal__container modal__container-del">
+        <button type="button" class="modal__close-del"></button>
+        <h2 class="modal__title-del">
+          Are you sure you want to delete this image?
+        </h2>
+        <form id="delete-form" class="modal__form-del" novalidate>
+          <button type="submit" class="modal__delete-btn">Delete</button>
+          <button type="button" class="modal__cancel-btn">Cancel</button>
+        </form>
       </div>
     </div>
   </body>
